--- a/index-contenido.html
+++ b/index-contenido.html
@@ -255,8 +255,8 @@
             // Cargar imágenes en espiral con enlaces correspondientes y títulos
             const images = [
                 { url: './img/bg-centro-2.png', link: '', title: '' },
-                { url: './img/maquina.png', link: 'https://www.example.com/page1', title: '' },
-                { url: './img/libro.png', link: 'https://www.example.com/page2', title: '' },
+                { url: './img/bg-1.jpg', link: 'https://www.example.com/page1', title: '' },
+                { url: './img/bg-2.jpg', link: 'https://www.example.com/page2', title: '' },
                 { url: './img/bg-4-2.png', link: 'https://www.example.com/page3', title: ''  },
                 { url: './img/bg-5.jpg', link: 'https://www.example.com/page4', title: '' },
                 { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: ''  },
@@ -317,7 +317,7 @@
                 } 
                 else if (index === 1) {
                     // Segunda imagen: PNG con transparencia y geometría personalizada
-                    geometry = new THREE.PlaneGeometry(1.0, 1.0, 1.0, 2.0) // Cambia las dimensiones si es necesario
+                    geometry = new THREE.PlaneGeometry(1.3, 0.9, 1, 1) // Relación 16:9
                     material = new THREE.MeshBasicMaterial({
                         map: texture,
                         transparent: true,  // Habilitar la transparencia para PNG
@@ -326,7 +326,7 @@
                 }   
                 else if (index === 2) {
                     // Tercera imagen: PNG con transparencia y geometría personalizada
-                    geometry = new THREE.PlaneGeometry(1.0, 1.0, 1.0, 2.0) // Cambia las dimensiones si es necesario
+                    geometry = new THREE.PlaneGeometry(1.3, 0.9, 1, 1) // Relación 16:9
                     material = new THREE.MeshBasicMaterial({
                         map: texture,
                         transparent: true,  // Habilitar la transparencia para PNG
@@ -335,7 +335,7 @@
                 }  
                 else if (index === 3) {
                     // Cuarta imagen: PNG con transparencia y geometría personalizada
-                    geometry = new THREE.PlaneGeometry(1.2, 0.9, 1, 1) // Cambia las dimensiones si es necesario
+                    geometry = new THREE.PlaneGeometry(1.3, 0.9, 1, 1) // Relación 16:9
                     material = new THREE.MeshBasicMaterial({
                         map: texture,
                         transparent: true,  // Habilitar la transparencia para PNG
