--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             }
                 .box-pantalla-inicio h1{
                     color: #fff;
-                    font: 90px / 1.2 'Founders Grotesk X-Condensed';
+                    font: 90px/0.7 'Founders Grotesk X-Condensed';
                     left: 50%;
                     text-align: center;
                     text-transform: uppercase;
@@ -51,6 +51,7 @@
                         font-size: 35px;
                         font-style: italic;
                         font-weight: 500;
+                        line-height: 70px;
                         text-transform: none;
                     }
                 .box-pantalla-inicio img{
