--- a/index-contenido.html
+++ b/index-contenido.html
@@ -253,8 +253,8 @@
         // Cargar imágenes en espiral con enlaces correspondientes y títulos
         const mediaItems = [
             { url: './img/bg-centro-2.png', link: '', title: '', type: 'image' },
-            { url: './videos/video-1.mp4', link: 'https://www.example.com/page1', title: '', type: 'video' },
-            { url: './img/bg-2.jpg', link: 'https://www.example.com/page2', title: '', type: 'image' },
+            { url: './videos/video-vargas-1.mp4', link: 'https://www.example.com/page1', title: '', type: 'video' },
+            { url: './img/bg-3.jpg', link: 'https://www.example.com/page2', title: '', type: 'image' },
             { url: './img/bg-4-2.png', link: 'https://www.example.com/page3', title: '', type: 'image' },
             { url: './img/bg-5.jpg', link: 'https://www.example.com/page4', title: '', type: 'image' },
             { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: '', type: 'image' },
