video en carrusel

--- a/index-contenido.html
+++ b/index-contenido.html
@@ -253,18 +253,16 @@
         // Cargar imágenes en espiral con enlaces correspondientes y títulos
         const mediaItems = [
             { url: './img/bg-centro-2.png', link: '', title: '', type: 'image' },
-            { url: './videos/video-vargas-1.mp4', link: 'https://www.example.com/page1', title: '', type: 'video' },
-            { url: './img/bg-3.jpg', link: 'https://www.example.com/page2', title: '', type: 'image' },
-            { url: './img/bg-4-2.png', link: 'https://www.example.com/page3', title: '', type: 'image' },
-            { url: './img/bg-5.jpg', link: 'https://www.example.com/page4', title: '', type: 'image' },
-            { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: '', type: 'image' },
-            { url: './img/bg-1.jpg', link: 'https://www.example.com/page6', title: '', type: 'image' },
-            { url: './img/bg-2.jpg', link: 'https://www.example.com/page7', title: '', type: 'image' },
-            { url: './img/bg-3.jpg', link: 'https://www.example.com/page8', title: '', type: 'image' },
-            { url: './img/bg-4.jpg', link: 'https://www.example.com/page9', title: '', type: 'image' },
-            { url: './img/bg-5.jpg', link: 'https://www.example.com/page10', title: '', type: 'image' },
-            { url: './img/bg-1.jpg', link: 'https://www.example.com/page11', title: '', type: 'image' },
-            { url: './img/bg-2.jpg', link: 'https://www.example.com/page12', title: '', type: 'image' }
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page1', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page2', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page3', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page4', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page5', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page6', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page7', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page8', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page9', title: '', type: 'video' },
+            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page10', title: '', type: 'video' }
         ];        
 
         // Cargar la textura de fondo
