video en carrusel

--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
             }
                 .box-pantalla-inicio h1{
                     color: #fff;
-                    font: 90px/0.7 'Founders Grotesk X-Condensed';
+                    font: 80px / 0.7 'Founders Grotesk X-Condensed';
                     left: 50%;
                     text-align: center;
                     text-transform: uppercase;
-                    transform: translate(-50%, -50%);                
+                    transform: translate(-50%, -50%);
                     position: absolute;
                     top: 50%;
+                    width: 100%;
                 }
                     .box-pantalla-inicio h1 span{
                         display: block;
