--- a/menu/index.html
+++ b/menu/index.html
@@ -5,208 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MVLL</title>
 
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-    <style>
-        @font-face {
-            font-family: 'Founders Grotesk X-Condensed';
-            src: url('./fonts/FoundersGroteskXCond-Bold.woff2') format('woff2'),
-                 url('./fonts/FoundersGroteskXCond-Bold.woff') format('woff');
-            font-weight: bold;            
-        }
-
-        body, html {
-            background-color: #000;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-            height: 400vh; 
-            font-style: normal;
-            font-display: swap;
-        }
-        .main-intro{
-            height: 100%;
-            opacity: 1;     
-            overflow-y: scroll;     
-            position: fixed;
-            z-index: 1000;
-            transition: opacity 1s ease-out;
-        }
-            .box-pantalla-inicio{
-                background: #000;
-                background-size: cover;
-                height: 100vh;       
-                position: relative;              
-                width: 100%;  
-            }
-                .box-pantalla-inicio h1{
-                    color: #fff;
-                    font: 90px / 1.2 'Founders Grotesk X-Condensed';
-                    left: 50%;
-                    text-align: center;
-                    text-transform: uppercase;
-                    transform: translate(-50%, -50%);                
-                    position: absolute;
-                    top: 50%;
-                }
-                    .box-pantalla-inicio h1 span{
-                        display: block;
-                        font-family: "Cormorant Garamond", serif;
-                        font-size: 35px;
-                        font-style: italic;
-                        font-weight: 500;
-                        text-transform: none;
-                    }
-                .box-pantalla-inicio img{
-                    bottom: 20px;
-                    cursor: pointer;
-                    left: 50%;
-                    margin-left: -50px;
-                    max-width: 70px;
-                    position: absolute;
-                }
-            .box-texto-intro{
-
-            }
-                .box-texto-intro p{
-                    font: 22px/1.3 "Cormorant Garamond", serif;
-                    font-weight: 400;
-                    font-style: italic;
-                }
-       
-        #spiral-container {
-            width: 100%;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 0;
-        }
-        .image-title {
-            position: fixed;
-            top: 80%;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 24px;
-            font-family: Arial, sans-serif;
-            color: #000;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .fixed-image {
-            position: fixed;
-            top: 30%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 300px;
-            height: 300px;
-            background-image: url('./img/bg-centro.png'); /* Imagen fija en el centro */
-            background-size: cover;
-            z-index: 1; /* Superponer por encima del carrusel */
-        }
-
-        .main-indicacion{
-            background-color: rgba(255, 255, 255, 0.9);
-            height: 100%;
-            opacity: 1;            
-            position: fixed;
-            width: 100%;
-            z-index: 10;
-            transition: opacity 1s ease;
-        }
-            .box-ctn-indicacion{
-                left: 50%;
-                position: absolute;
-                transform: translate(-50%, -50%);
-                top: 50%;
-            }
-                .box-ctn-indicacion img{
-                    display: block;
-                    margin: 0 auto;
-                    max-width: 20px;
-                }
-                .box-ctn-indicacion p{
-                    color: rgb(59, 59, 59);
-                    font: 17px/1.2 arial;
-                    margin: 10px auto;
-                    max-width: 200px;
-                    text-align: center;
-                }
-            .main-indicacion.fade-out {
-                opacity: 0;
-                pointer-events: none; 
-            }
-        #indicacion-desktop{
-            display: block;
-        }
-        #indicacion-movil{
-            display: none;
-        }
-            #indicacion-movil img{
-                max-width: 30px;
-            }
-        #image-title {
-            opacity: 0; 
-            transition: opacity 0.5s ease;             
-        }
-
-        .box-titular-interior{
-            position: fixed;
-            top: 10px;
-            width: 100%;
-            z-index: 10;
-        }
-            .box-titular-interior h4{
-                color: #000;
-                font: 40px / 0.7 'Founders Grotesk X-Condensed';
-                letter-spacing: 1px;
-                margin: 0 auto;
-                text-align: center;
-                text-transform: uppercase;
-            }
-            .box-titular-interior h4 span {
-                    display: block;
-                    font-family: "Cormorant Garamond", serif;
-                    font-size: 27px;
-                    font-style: italic;
-                    font-weight: 500;
-                    letter-spacing: -1px;
-                    line-height: 50px;
-                    text-transform: none;
-                }
-
-
-        @media only screen and (max-width: 640px) {
-
-            body,
-            html{
-                height: 100vh;
-            }
-
-            #indicacion-desktop{
-                display: none;
-            }
-            #indicacion-movil{
-                display: block;
-            }
-            .box-pantalla-inicio h1{
-                font-size: 4.5rem;
-                line-height: 0.9;
-                width: 95%;
-            }
-            .box-pantalla-inicio h1 span{
-                font-size: 30px;
-                line-height: 2;
-            }            
-
-        }
-
-
-    </style>
+   
 </head>
-<body>
+<body id="menu">
 
     <div class="box-titular-interior">
         <h4>
@@ -217,14 +23,14 @@
     
     <div class="main-indicacion">
         <div class="box-ctn-indicacion" id="indicacion-desktop">
-            <img src="./img/scroll-icon-2.png" alt="" width="100%">
+            <img src="../img/scroll-icon-2.png" alt="" width="100%">
             <p>
                 Haz scroll hacia abajo para cambiar de imagen
             </p>
         </div>
 
         <div class="box-ctn-indicacion" id="indicacion-movil">
-            <img src="./img/scroll-icon-movil-2.png" alt="" width="100%">
+            <img src="../img/scroll-icon-movil-2.png" alt="" width="100%">
             <p>
                 Haz scroll hacia los lados para cambiar de imagen
             </p>
@@ -265,7 +71,7 @@
         const camera = new THREE.PerspectiveCamera(37, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
 
-        renderer.setClearColor(0x000000, 1); // Fondo negro
+        renderer.setClearColor(0x000000, 1); // Color de fondo de escena
         renderer.setSize(window.innerWidth, window.innerHeight);
         container.appendChild(renderer.domElement);
 
@@ -284,22 +90,22 @@
 
         // Cargar imágenes en espiral con enlaces correspondientes y títulos
         const mediaItems = [
-            { url: './img/bg-centro-2.png', link: '', title: '', type: 'image' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page1', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page2', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page3', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page4', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page5', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page6', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page7', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page8', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page9', title: '', type: 'video' },
-            { url: './videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page10', title: '', type: 'video' }
+            { url: '../img/bg-centro-2.png', link: '', title: '', type: 'image' },
+            { url: '../videos/video-vargas-1-2.mp4', link: '../capitulo-1/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page2', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page3', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page4', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page5', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page6', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page7', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page8', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page9', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page10', title: '', type: 'video' }
         ];        
 
         // Cargar la textura de fondo
         const loader = new THREE.TextureLoader();
-        const backgroundTexture = loader.load('./img/bg-test-5.jpg');
+        const backgroundTexture = loader.load('../img/bg-test-5.jpg');
 
         // Configuraciones para la espiral
         const radius = 3.3;
