--- a/menu/index.html
+++ b/menu/index.html
@@ -92,7 +92,7 @@
         const mediaItems = [
             { url: '../img/bg-centro-2.png', link: '', title: '', type: 'image' },
             { url: '../videos/video-vargas-1-2.mp4', link: '../capitulo-1/index.html', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page2', title: '', type: 'video' },
+            { url: '../videos/video-vargas-1-2.mp4', link: '../capitulo-2/index.html', title: '', type: 'video' },
             { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page3', title: '', type: 'video' },
             { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page4', title: '', type: 'video' },
             { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page5', title: '', type: 'video' },
