--- a/capitulo-4/index.html
+++ b/capitulo-4/index.html
@@ -81,9 +81,25 @@
             </div>
             <div class="box-ilustracion-personaje">
                 <img src="../img/bg-personaje-2.jpg" alt="" width="100%">
-                <h6>“A usted no lo admiro, excelencia. Yo vivo por usted. para usted. Si me permite. Soy el perro guardián de usted”</h6>
-            </div>
-           
+                <h6>“A usted no lo admiro, excelencia. Yo vivo por usted. para usted. Si me permite. Soy el perro guardián de usted.”</h6>
+            </div>           
+        </div>
+
+        <div class="box-personaje" id="personaje-3">   
+            <img src="../img/bg-personaje-3.jpg" alt="" width="100%">         
+            <div class="box-texto-personaje">                
+                <h5>
+                    Coronel Abbes
+                    <span>La fiesta del chivo - 2000</span>
+                </h5>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+                <p>
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <h6>“Mira, marito. He hecho todas las locuras del mundo en mi vida, pero ésta no la voy a hacer.”</h6>
+            </div>         
         </div>
 
    </div>    
