--- a/capitulo-4/index.html
+++ b/capitulo-4/index.html
@@ -102,6 +102,40 @@
             </div>         
         </div>
 
+        <div class="box-personaje" id="personaje-4">   
+            <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
+            <div class="box-texto-personaje">                
+                <h5>
+                    Pantaleón
+                    <span>Pantalón y las visitadoras - 1973</span>
+                </h5>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+                <p>
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <h6>“Yo necesito tener jefes, si no tuviera, no sabría que hacer, el mundo se me vendria abajo.”</h6>
+            </div>         
+        </div>
+
+        <div class="box-personaje" id="personaje-5">   
+            <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
+            <div class="box-texto-personaje">                
+                <h5>
+                    Pantaleón
+                    <span>Pantalón y las visitadoras - 1973</span>
+                </h5>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+                <p>
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <h6>“Yo necesito tener jefes, si no tuviera, no sabría que hacer, el mundo se me vendria abajo.”</h6>
+            </div>         
+        </div>
+
    </div>    
 
 
