--- a/capitulo-4/index.html
+++ b/capitulo-4/index.html
@@ -65,6 +65,8 @@
                 </p>
             </div>
         </div>
+        
+        <div class="separador-personaje"></div>
 
         <div class="box-personaje" id="personaje-2">            
             <div class="box-texto-personaje">                
@@ -85,6 +87,8 @@
             </div>           
         </div>
 
+        <div class="separador-personaje"></div>
+
         <div class="box-personaje" id="personaje-3">   
             <img src="../img/bg-personaje-3.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
@@ -102,6 +106,8 @@
             </div>         
         </div>
 
+        <div class="separador-personaje"></div>
+
         <div class="box-personaje" id="personaje-4">   
             <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
@@ -118,6 +124,8 @@
                 <h6>“Yo necesito tener jefes, si no tuviera, no sabría que hacer, el mundo se me vendria abajo.”</h6>
             </div>         
         </div>
+
+        <div class="separador-personaje separador-vertical"></div>
 
         <div class="box-personaje" id="personaje-5">   
             <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
